--- a/template.yaml
+++ b/template.yaml
@@ -49,7 +49,7 @@ Resources:
                             "attributes": {}
                         }
                     },
-                    "Visitor": {
+                    "Resource": {
                         "memberOfTypes": [],
                         "shape": {
                             "type": "Record",
@@ -65,6 +65,20 @@ Resources:
                     }
                 },
                 "actions": {
+                    "showAdminBadge": {
+                        "appliesTo": {
+                            "context": {
+                                "type": "Record",
+                                "attributes": {}
+                            },
+                            "principalTypes": [
+                                "User"
+                            ],
+                            "resourceTypes": [
+                                "Resource"
+                            ]
+                        }
+                    },
                     "viewVisitorManagement": {
                         "appliesTo": {
                             "context": {
@@ -75,7 +89,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     },
@@ -89,7 +103,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     },
@@ -103,7 +117,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     },                    
@@ -117,7 +131,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     },                    
@@ -131,7 +145,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     },                    
@@ -145,7 +159,7 @@ Resources:
                                 "User"
                             ],
                             "resourceTypes": [
-                                "Visitor"
+                                "Resource"
                             ]
                         }
                     }
@@ -170,8 +184,9 @@ Resources:
                     VisitorManagement::Action::"registerVisitor",
                     VisitorManagement::Action::"searchVisitor",
                     VisitorManagement::Action::"verifyVisitor",
+                    VisitorManagement::Action::"showAdminBadge",
                     VisitorManagement::Action::"viewVisitorManagement"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                resource == VisitorManagement::Resource::"visitorResource"
             );
   AllowResidentGroupAccessPolicy:
     Type: AWS::VerifiedPermissions::Policy
@@ -187,7 +202,7 @@ Resources:
                     VisitorManagement::Action::"inviteVisitor",
                     VisitorManagement::Action::"registerVisitor",
                     VisitorManagement::Action::"viewVisitorManagement"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                resource == VisitorManagement::Resource::"visitorResource"
             );
   AllowGuardGroupAccessPolicy:
     Type: AWS::VerifiedPermissions::Policy
@@ -201,7 +216,7 @@ Resources:
                 action in [VisitorManagement::Action::"verifyVisitor",
                            VisitorManagement::Action::"searchVisitor",
                            VisitorManagement::Action::"viewVisitorManagement"],
-                resource == VisitorManagement::Visitor::"visitorResource"
+                resource == VisitorManagement::Resource::"visitorResource"
             );
 
   ApiGatewayApi:
