--- a/template.yaml
+++ b/template.yaml
@@ -746,6 +746,7 @@ Resources:
         - email
       AutoVerifiedAttributes:
         - email
+      DeletionProtection: ENABLED
 
   CognitoUserPoolClient:
     Type: AWS::Cognito::UserPoolClient
