--- a/infrastructure/dynamo-db-tables.yaml
+++ b/infrastructure/dynamo-db-tables.yaml
@@ -1,5 +1,3 @@
-AWSTemplateFormatVersion: "2010-09-09"
-
 VisitorsTable:
   Type: AWS::DynamoDB::Table
   Properties:
@@ -7,10 +5,22 @@ VisitorsTable:
     AttributeDefinitions:
       - AttributeName: registrationId
         AttributeType: S
+      - AttributeName: residentId
+        AttributeType: S
     KeySchema:
       - AttributeName: registrationId
         KeyType: HASH
+    GlobalSecondaryIndexes:
+      - IndexName: ResidentIdIndex
+        KeySchema:
+          - AttributeName: residentId
+            KeyType: HASH
+        Projection:
+          ProjectionType: ALL
     BillingMode: PAY_PER_REQUEST
+    PointInTimeRecoverySpecification:
+      PointInTimeRecoveryEnabled: true
+    DeletionProtectionEnabled: true
 
 InviteLinksTable:
   Type: AWS::DynamoDB::Table
@@ -19,9 +29,34 @@ InviteLinksTable:
     AttributeDefinitions:
       - AttributeName: inviteToken
         AttributeType: S
+      - AttributeName: residentId
+        AttributeType: S
+    KeySchema:
+      - AttributeName: inviteToken
+        KeyType: HASH
+    GlobalSecondaryIndexes:
+      - IndexName: ResidentIdIndex
+        KeySchema:
+          - AttributeName: residentId
+            KeyType: HASH
+        Projection:
+          ProjectionType: ALL
+    BillingMode: PAY_PER_REQUEST
+    TimeToLiveSpecification:
+      AttributeName: ttl
+      Enabled: true
+
+VisitRequestsTable:
+  Type: AWS::DynamoDB::Table
+  Properties:
+    TableName: VisitRequestsTable
+    AttributeDefinitions:
+      - AttributeName: inviteToken
+        AttributeType: S
     KeySchema:
       - AttributeName: inviteToken
         KeyType: HASH
     BillingMode: PAY_PER_REQUEST
     TimeToLiveSpecification:
-      AttributeName:
+      AttributeName: ttl
+      Enabled: true
