--- a/template.yaml
+++ b/template.yaml
@@ -527,68 +527,77 @@ Resources:
   # Simple syntax to create a DynamoDB table with a single attribute primary key, more in
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlesssimpletable
 
-  VisitorsTable:
-    Type: AWS::DynamoDB::Table
+  DatabaseStack:
+    Type: AWS::CloudFormation::Stack
     Properties:
-      TableName: VisitorsTable
-      AttributeDefinitions:
-        - AttributeName: registrationId
-          AttributeType: S
-        - AttributeName: residentId
-          AttributeType: S # Add GSI for residentId queries
-      KeySchema:
-        - AttributeName: registrationId
-          KeyType: HASH
-      GlobalSecondaryIndexes:
-        - IndexName: ResidentIdIndex
-          KeySchema:
-            - AttributeName: residentId
-              KeyType: HASH
-          Projection:
-            ProjectionType: ALL
-      BillingMode: PAY_PER_REQUEST
-      PointInTimeRecoverySpecification:
-        PointInTimeRecoveryEnabled: true
-      DeletionProtectionEnabled: true
+      TemplateURL: ./infrastructure/dynamodb-stack.yaml
+      Parameters:
+        AdminGroupName: !Ref AdminGroupName
+        ResidentGroupName: !Ref ResidentGroupName
+        GuardGroupName: !Ref GuardGroupName
 
-  InviteLinksTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: InviteLinksTable
-      AttributeDefinitions:
-        - AttributeName: inviteToken
-          AttributeType: S
-        - AttributeName: residentId
-          AttributeType: S # Add GSI for residentId queries
-      KeySchema:
-        - AttributeName: inviteToken
-          KeyType: HASH
-      GlobalSecondaryIndexes:
-        - IndexName: ResidentIdIndex
-          KeySchema:
-            - AttributeName: residentId
-              KeyType: HASH
-          Projection:
-            ProjectionType: ALL
-      BillingMode: PAY_PER_REQUEST
-      TimeToLiveSpecification:
-        AttributeName: ttl
-        Enabled: true
+  # VisitorsTable:
+  #   Type: AWS::DynamoDB::Table
+  #   Properties:
+  #     TableName: VisitorsTable
+  #     AttributeDefinitions:
+  #       - AttributeName: registrationId
+  #         AttributeType: S
+  #       - AttributeName: residentId
+  #         AttributeType: S # Add GSI for residentId queries
+  #     KeySchema:
+  #       - AttributeName: registrationId
+  #         KeyType: HASH
+  #     GlobalSecondaryIndexes:
+  #       - IndexName: ResidentIdIndex
+  #         KeySchema:
+  #           - AttributeName: residentId
+  #             KeyType: HASH
+  #         Projection:
+  #           ProjectionType: ALL
+  #     BillingMode: PAY_PER_REQUEST
+  #     PointInTimeRecoverySpecification:
+  #       PointInTimeRecoveryEnabled: true
+  #     DeletionProtectionEnabled: true
 
-  VisitRequestsTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: VisitRequestsTable
-      AttributeDefinitions:
-        - AttributeName: inviteToken
-          AttributeType: S
-      KeySchema:
-        - AttributeName: inviteToken
-          KeyType: HASH
-      BillingMode: PAY_PER_REQUEST
-      TimeToLiveSpecification:
-        AttributeName: ttl
-        Enabled: true
+  # InviteLinksTable:
+  #   Type: AWS::DynamoDB::Table
+  #   Properties:
+  #     TableName: InviteLinksTable
+  #     AttributeDefinitions:
+  #       - AttributeName: inviteToken
+  #         AttributeType: S
+  #       - AttributeName: residentId
+  #         AttributeType: S # Add GSI for residentId queries
+  #     KeySchema:
+  #       - AttributeName: inviteToken
+  #         KeyType: HASH
+  #     GlobalSecondaryIndexes:
+  #       - IndexName: ResidentIdIndex
+  #         KeySchema:
+  #           - AttributeName: residentId
+  #             KeyType: HASH
+  #         Projection:
+  #           ProjectionType: ALL
+  #     BillingMode: PAY_PER_REQUEST
+  #     TimeToLiveSpecification:
+  #       AttributeName: ttl
+  #       Enabled: true
+
+  # VisitRequestsTable:
+  #   Type: AWS::DynamoDB::Table
+  #   Properties:
+  #     TableName: VisitRequestsTable
+  #     AttributeDefinitions:
+  #       - AttributeName: inviteToken
+  #         AttributeType: S
+  #     KeySchema:
+  #       - AttributeName: inviteToken
+  #         KeyType: HASH
+  #     BillingMode: PAY_PER_REQUEST
+  #     TimeToLiveSpecification:
+  #       AttributeName: ttl
+  #       Enabled: true
 
   # S3 Bucket to host single page app website
   WebSiteBucket:
